--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rambda": "^2.13.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-promisify-modal": "^1.0.0",
     "react-scripts-ts": "^2.16.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
