--- a/example/package.json
+++ b/example/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@types/codemirror": "^0.0.79",
+    "codemirror": "^5.49.2",
     "mockjs": "^1.0.1-beta3",
     "prop-types": "^15.6.2",
+    "rambdax": "^2.14.1",
+    "react-codemirror2": "^6.0.0",
     "react-promisify-modal": "^1.0.0",
     "react-scripts": "^1.1.4",
     "valor-uform-ext": "link:.."
