--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "codemirror": "^5.49.2",
     "rambdax": "^2.14.1",
     "react": "^16.8.0",
-    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.0",
+    "react-codemirror2": "^6.0.0",
+    "rambda": "^2.13.0",
+    "react-promisify-modal": "^1.0.0",
     "valor-app-utils": "^1.0.35"
   },
   "devDependencies": {
@@ -39,6 +41,8 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@uform/antd": "^0.4.0",
+    "codemirror": "^5.49.2",
+    "react-codemirror2": "^6.0.0",
     "antd": "^3.20.7",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
