--- a/example/package.json
+++ b/example/package.json
@@ -9,10 +9,12 @@
     "codemirror": "^5.49.2",
     "mockjs": "^1.0.1-beta3",
     "prop-types": "^15.6.2",
-    "rambdax": "^2.14.1",
+    "rambda": "^6.5.3",
+    "rambdax": "^7.2.0",
     "react-codemirror2": "^6.0.0",
     "react-promisify-modal": "^1.0.0",
     "react-scripts": "^1.1.4",
+    "styled-components": "^5.2.1",
     "valor-uform-ext": "link:.."
   },
   "scripts": {
