--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valor-uform-ext",
-  "version": "1.0.13",
+  "version": "2.0.0",
   "description": "",
   "author": "g770728y",
   "license": "MIT",
@@ -23,13 +23,14 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@uform/antd": "^0.4.0",
-    "antd": "^3.19.5",
+    "@formily/antd": "^1.3.12",
+    "@formily/antd-components": "^1.3.12",
     "codemirror": "^5.49.2",
-    "rambda": "^4.4.0",
-    "rambdax": "^3.5.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "antd": "^4.12.3",
+    "rambda": "^6.5.3",
+    "rambdax": "^7.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-codemirror2": "^6.0.0",
     "react-promisify-modal": "^1.0.0",
     "valor-app-utils": "^1.0.35"
@@ -38,20 +39,21 @@
     "@svgr/rollup": "^2.4.1",
     "@types/codemirror": "^0.0.79",
     "@types/jest": "^23.1.5",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
-    "@uform/antd": "^0.4.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@formily/antd": "^1.3.12",
+    "@formily/antd-components": "^1.3.12",
     "codemirror": "^5.49.2",
     "react-codemirror2": "^6.0.0",
-    "antd": "^3.19.5",
+    "antd": "^4.12.3",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
     "gh-pages": "^1.2.0",
-    "rambda": "^4.4.0",
-    "rambdax": "^3.5.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "rambda": "^6.5.3",
+    "rambdax": "^7.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-promisify-modal": "^1.0.0",
     "react-scripts-ts": "^2.16.0",
     "rollup": "^0.62.0",
@@ -62,7 +64,7 @@
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-typescript2": "^0.17.0",
     "rollup-plugin-url": "^1.4.0",
-    "typescript": "^2.8.3",
+    "typescript": "^4.1.0",
     "valor-app-utils": "^1.0.3"
   },
   "files": [
