--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valor-uform-ext",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "",
   "author": "g770728y",
   "license": "MIT",
@@ -29,32 +29,29 @@
     "@formily/antd": "^1.3.12",
     "@formily/antd-components": "^1.3.12",
     "antd": "^4.12.3",
-    "codemirror": "^5.49.2",
     "rambdax": "^7.2.0",
     "react": "^16.9.0",
-    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.9.0",
     "react-promisify-modal": "^1.0.0",
     "valor-app-utils": "^2.0.1"
   },
   "devDependencies": {
+    "imask": "^6.0.7",
+    "react-imask": "^6.0.7",
     "@ant-design/icons": "^4.5.0",
     "@formily/antd": "^1.3.12",
     "@formily/antd-components": "^1.3.12",
     "@svgr/rollup": "^2.4.1",
-    "@types/codemirror": "^0.0.79",
     "@types/jest": "^23.1.5",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "antd": "^4.12.3",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
-    "codemirror": "^5.49.2",
     "cross-env": "^5.1.4",
     "gh-pages": "^1.2.0",
     "rambdax": "^7.2.0",
     "react": "^16.9.0",
-    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.9.0",
     "react-promisify-modal": "^1.0.0",
     "react-scripts-ts": "^2.16.0",
